--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,15 @@
 <h1> Signup! </h1>
 
-<%= form_for(@user) do |f| %>
+<%= form_for(@user, url: '/signup' ) do |f| %>
 
     <%= f.label :username %>
-    <%= f.text_field :username %>
+    <%= f.text_field :username, required: true %>
     <br>
     <%= f.label :email %>
-    <%= f.email_field :email %>
+    <%= f.email_field :email, required: true %>
     <br>
     <%= f.label :password %>
-    <%= f.password_field :password %>
+    <%= f.password_field :password, required: true %>
     <br>
     <%= f.submit "Submit" %>
 
