--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
 <h1> Welcome <%= @user.username%> </h1>
 
-<%=  %>
+<%= form_tag(url:"/logout", method:'delete') do %>
+  <% submit_tag "Logout" %>
+<% end %>
