--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+
+  <div>
+    <%= link_to "Sign Up", signup_path %> |
+    <%= link_to "Log In", login_path %> |
+    <%= link_to "Log Out", logout_path %>
+
+  </div>
     <%= yield %>
   </body>
 </html>
