--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <div>
     <%= link_to "Sign Up", signup_path %> |
     <%= link_to "Log In", login_path %> |
-    <%= link_to "Log Out", logout_path %>
+    <%= link_to "Logout", logout_path, method:"delete" %>
 
   </div>
     <%= yield %>
