--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,12 @@
   <body>
 
   <div>
-    <%= link_to "Sign Up", signup_path %> |
-    <%= link_to "Log In", login_path %> |
+    <% if logged_in? %>
     <%= link_to "Logout", logout_path, method:"delete" %>
+    <% else %>
+    <%= link_to "Sign Up", signup_path %> |
+    <%= link_to "Log In", login_path %> 
+    <% end %>
 
   </div>
     <%= yield %>
