added pipes in between the navbar options so that it looks more user friendly

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
 
   <div>
     <% if logged_in? %>
-    <%= link_to "Add a Movie", new_movie_path %>
-    <%= link_to "All Movies", movies_path %>
+    <%= link_to "Add a Movie", new_movie_path %> |
+    <%= link_to "All Movies", movies_path %> |
     <%= link_to "Logout", logout_path, method:"delete" %>
     <% else %>
     <%= link_to "Sign Up", signup_path %> |
