--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,1 +1,25 @@
 <h1> New Movie </h1>
+
+<%= form_for(@movie) do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <br>
+  <br>
+  <%= f.label :description %>
+  <%= f.text_area :description %>
+  <br>
+  <br>
+  <%= f.label :movie_length %>
+  <%= f.text_field :movie_length %>
+  <br>
+  <br>
+  <%= f.label :director %>
+  <%= f.text_field :director %>
+  <br>
+  <br>
+  <%= f.label :rating %>
+  <%= f.text_field :rating %>
+  <br>
+  <br>
+  <%= f.submit %>
+<% end %>
