added filler code in the movies views index and show erb files to see if a movie is being created on the browser

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,2 +1,4 @@
 <h1><%=@movie.title%></h1>
-<h2><%=link_to @movie.user.username, user_path(@movie.user)%> </h2>
+<h2>By: <%=@movie.user.username%> </h2>
+
+<p><%= @movie.description%></p>
