created a edit.html.erb file in the movies views to allow a user to edit their movies

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,2 @@
 <h1><%=@movie.title%></h1>
-<h2>By: <%=@movie.user.username%> </h2>
-
-<p><%= @movie.description%></p>
+<h2><%=@movie.user.username%> </h2>
