--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,7 @@
 <h1> All Movies </h1>
 
-<% @movies.each do |movie|%>
-    <%=movie.title %>
-<%end%>
+<ul>
+<% @movies.each do |m|%>
+  <li><%= link_to m.title, movie_path(m) %></li>
+<% end %>
+</ul>
