added a flash message in the layouts application.html.erb so that if a flash message is used somewhere else it will appear on the browser to the user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,12 @@
     <% end %>
 
   </div>
+
+  <div>
+    <% if flash[:message] %>
+      <%= flash[:message] %>
+    <% end %>
+  </div>
     <%= yield %>
   </body>
 </html>
