added an @error in the application.html.erb so that way if you want to show an error message but dont want to have to redirect them somewhere, you would use this error message instead of a flash message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
     <% if flash[:message] %>
       <%= flash[:message] %>
     <% end %>
+    <%= @error %>
   </div>
     <%= yield %>
   </body>
