added a liunk to see all reviews under each movie

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -3,6 +3,8 @@
 
 <div><%= @movie.description%></div>
 
+<p><%= link_to 'See all reviews', movie_reviews_path(@movie) %></p>
+
 <h4>Reviews:</h4>
 <% @movie.reviews.each do |r|%>
   <li><strong><%= r.user.username%></strong> says "<%= link_to r.content, review_path(r)%>" </li>
