--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,6 +4,7 @@
 <div><%= @movie.description%></div>
 
 <p><%= link_to 'See all reviews', movie_reviews_path(@movie) %></p>
+<p><%= link_to 'Add a review', new_movie_review_path(@movie) %></p>
 
 <h4>Reviews:</h4>
 <% @movie.reviews.each do |r|%>
