--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,8 +1,15 @@
+<% if @movie %>
+<h1>New Review for <%= @movie.title %></h1>
+<% else %>
 <h1>New Review!</h1>
+<% end %>
 
-<%= form_for(@review) do |f|%>
+
+<%= form_for([@post, @review]) do |f|%>
+<% if !@movie %>
   <%= f.label :movie %>
   <%= f.collection_select :movie_id, Movie.all, :id, :title %>
+<% end %>
   <%= f.label :content %>
   <%= f.text_field :content %>
   <%= f.label :rating %>
