added a hidden field of movie_id in the form for form to create a new review

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -21,6 +21,8 @@
 <% if !@movie %>
   <%= f.label :movie %>
   <%= f.collection_select :movie_id, Movie.all, :id, :title %>
+<% else %>
+  <%= f.hidden_field :movie_id %>
 <% end %>
   <%= f.label :content %>
   <%= f.text_field :content %>
