--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @comment.content%> - <%= @review.user.username%></h2>
+<h2><%= @review.content%> - <%= @review.user.username%></h2>
 
 
 <h4>Read the review here: <%= link_to @review.movie.title, movie_path(@review.movie_id) %></h4>
