added to the form for in the reviews show page so that the url will render properly with the nested routes

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -8,5 +8,5 @@
 
 <h4>Reviews:</h4>
 <% @movie.reviews.each do |r|%>
-  <li><strong><%= r.user.username%></strong> says "<%= link_to r.content, review_path(r)%>" </li>
+  <li><strong><%= r.user.username%></strong> says "<%= link_to r.content, movie_review_path(@movie, r)%>" </li>
 <% end %>
