--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -8,5 +8,5 @@
 
 <h4>Reviews:</h4>
 <% @movie.reviews.each do |r|%>
-  <li><strong><%= r.user.username%></strong> says "<%= link_to r.content, movie_review_path(@movie, r)%>" </li>
+  <li><strong><%= r.user.username%></strong> says "<%= link_to r.content, movie_review_path(@movie, r)%>" and gave it a rating of <%= r.rating %></li>
 <% end %>
