--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,6 +1,17 @@
 <h1> New Movie </h1>
 
 <%= form_for(@movie) do |f| %>
+
+  <%= f.label "Choose a genre:" %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: true%>
+
+  <p>Or create a new genre:
+  <%= f.fields_for :genre do |g| %>
+    <%= g.text_field :name %>
+  <% end %>
+  </p>
+  <br>
+  <br>
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br>
