changes the scope method to put the movies in order of rating

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
 <% @movies.each do |m|%>
-  <li><%= link_to m.title, movie_path(m) %></li>
+  <li><%= link_to m.title, movie_path(m) %> - <%= m.rating%> </li>
 <% end %>
 </ul>
