--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,18 @@
-<h1> All Movies </h1>
+<% if @user %>
+  <h1><%= @user.username %>'s Movies:</h1>
+<% else %>
+  <h1> All Movies </h1>
+<% end %>
+
+<% if @movies.empty? %>
+  <h2> There are no movies yet, write one <%= link_to "here", new_movie_path%>!</h2>
+<% else %>
+
 
 <ul>
 <% @movies.each do |m|%>
   <li><%= link_to m.title, movie_path(m) %> - <%= m.rating%> </li>
 <% end %>
 </ul>
+
+<% end %>
