--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <% if @movies.empty? %>
-  <h2> There are no movies yet, write one <%= link_to "here", new_movie_path%>!</h2>
+  <h2> You haven't created any movie reviews yet, create one <%= link_to "here", new_movie_path%> now!</h2>
 <% else %>
 
 
