--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,9 +1,9 @@
-<% if @movie.errors.any? %>
+<% if object.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@movie.errors.count, "error") %> prohibited this movie from being saved:</h2>
+    <h2><%= pluralize(object.errors.count, "error") %> prohibited this from being saved:</h2>
 
     <ul>
-      <% @movie.errors.each do |error| %>
+      <% object.errors.each do |error| %>
         <li><%= error.full_message %></li>
       <% end %>
     </ul>
