rendered the partials in all the new and edit view pages

--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,5 +1,7 @@
 <h1> New Movie </h1>
 
+<%= render partial: "layouts/errors", locals: {object: @movie}%>
+
 <%= form_for(@movie) do |f| %>
 
   <%= f.label "Choose a genre:" %>
