--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,5 +1,7 @@
 <h1> Edit <%= @movie.title %>!</h1>
 
+<%= render partial: "layouts/errors", locals: {object: @movie}%>
+
 <%= form_for(@movie) do |f| %>
 
   <%= f.label "Choose a genre:" %>
