--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,5 +1,7 @@
 <h1>Edit Review!</h1>
 
+<%= render partial: "layouts/errors", locals: {object: @review}%>
+
 <%= form_for(@review) do |f|%>
   <%= f.label :movie %>
   <%= f.collection_select :movie_id, Movie.all, :id, :title %>
