--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,18 +4,7 @@
 <h1>New Review!</h1>
 <% end %>
 
-<% if @review.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
-
-    <ul>
-      <% @review.errors.each do |error| %>
-        <li><%= error.full_message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
-
+<%= render partial: "layouts/errors", locals: {object: @review}%>
 
 <%= form_for([@review.movie, @review]) do |f|%>
 <% if !@review.movie %>
