--- a/app/views/movies/_movies.html.erb
+++ b/app/views/movies/_movies.html.erb
@@ -1,5 +1,5 @@
 <ul>
-<% @movies.each do |m|%>
+<% movies.each do |m|%>
   <li><%= link_to m.title, movie_path(m) %> - <%= m.rating%> </li>
 <% end %>
 </ul>
