--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,6 +6,12 @@
     <%= submit_tag("Search") %>
 <% end %>
 
+<%# form_tag("/movies", method: 'get') do  %>
+    <%# label_tag(:genre_id, "Filter by Genre:") %>
+    <%# collection_select(:movie, :genre_id, Genre.all, :id, :name) %>
+    <%# submit_tag("Filter") %>
+<%# end %>
+
 <% if @movies.empty? %>
   <h2> You haven't created any movie reviews yet, create one <%= link_to "here", new_movie_path%> now!</h2>
 <% else %>
