--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
 
   <body>
 
+    <%# flash.each do |name, msg| %>
+      <%# content_tag(:div, msg, class: "alert alert-info") %>
+    <%#% end %>
+
   <div>
     <% if logged_in? %>
     <%= link_to "Home", user_path(current_user) %> |
