--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,23 +1,27 @@
 <h1><%=@movie.title%></h1>
 <h4>Published by: <%=link_to @movie.user.username, user_path(@movie.user)%> </h4>
 <h3>Genre: <%= @movie.genre.try(:name) %></h3>
-<% if @movie.user == current_user %>
-  <h4><%= link_to "Edit Movie", edit_movie_path(@movie)%>
-  <h4><%= link_to "Delete Movie", movie_path(@movie), :method => :delete %>
-<% end %>
 
 <div>Movie Description: <%= @movie.description%></div>
 <div>Movie Length: <%= @movie.movie_length%></div>
 <div>Director: <%= @movie.director%></div>
 <div>Rating: <%= @movie.rating%></div>
 
-<p><%= link_to 'See all reviews', movie_reviews_path(@movie) %></p>
-<% if !@movie.reviews.empty? %>
-<p><%= link_to 'Add a review', new_movie_review_path(@movie) %></p>
+<% if @movie.user == current_user %>
+  <%= link_to "Edit Movie", edit_movie_path(@movie)%><br>
+  <%= link_to "Delete Movie", movie_path(@movie), :method => :delete %>
+<% end %>
+<br><br>
+
+
 <h4> Most recent Reviews:</h4>
   <% @movie.reviews.order(updated_at: :desc).limit(5).each do |r|%>
   <li><strong><%= r.user.username%></strong> says "<%= link_to r.content, movie_review_path(@movie, r)%>" and gave it a rating of <%= r.rating %> at <%= r.updated_at.strftime("%I:%M %p on %m/%d/%Y")%></li>
   <% end %>
+  <br>
+  <%= link_to 'See all reviews', movie_reviews_path(@movie) %><br>
+<% if !@movie.reviews.empty? %>
+  <%= link_to 'Add a review', new_movie_review_path(@movie) %>
 <% end %>
 
 <h4><%= link_to 'Back', movies_path, class: "btn btn-info"  %></h4>
