images for each movie will now also appear on the movie index page

--- a/app/views/movies/_movies.html.erb
+++ b/app/views/movies/_movies.html.erb
@@ -1,5 +1,6 @@
 <ul>
 <% movies.each do |m|%>
+  <td><%= image_tag m.image.url(:medium) %>
   <li><%= link_to m.title, movie_path(m) %> - <%= m.rating%> </li>
 <% end %>
 </ul>
