--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,20 +12,7 @@
 
   <body>
 
-  <div>
-    <% if logged_in? %>
-    <%= link_to "Home", user_path(current_user) %> |
-    <%= link_to "Add a Movie", new_movie_path %> |
-    <%= link_to "All Movies", movies_path %> |
-    <%= link_to "My Movies", user_movies_path(current_user) %> |
-    <%= link_to "Add a Review", new_review_path %> |
-    <%= link_to "Logout", logout_path, method:"delete" %>
-    <% else %>
-    <%= link_to "Sign Up", signup_path %> |
-    <%= link_to "Log In", login_path %> 
-    <% end %>
-
-  </div>
+  <%= render 'layouts/navbar' %>
 
   <div>
     <% if flash[:message] %>
