--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,18 +1,53 @@
-<%= image_tag @movie.image.url(:medium) %>
-<h1><%=@movie.title%></h1>
-<h4>Published by: <%=link_to @movie.user.username, user_path(@movie.user)%> </h4>
-<h3>Genre: <%= @movie.genre.try(:name) %></h3>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-md-4">
+        <%= image_tag @movie.image.url(:medium) %>
+          <div class="table-responsive">
+            <table class="table">
+              <tbody>
+                <tr>
+                  <td><strong>Created by:</strong></td>
+                  <td><%=link_to @movie.user.username, user_path(@movie.user)%></td>
+                </tr>
+                <br>
+                <tr>
+                  <td><strong>Title:</strong></td>
+                  <td><%=@movie.title%></td>
+                </tr>
+                <br>
+                <tr>
+                  <td><strong>Description:</strong></td>
+                  <td><%= @movie.description%></td>
+                </tr>
+                <br>
+                <tr>
+                  <td><strong>Movie Length:</strong></td>
+                  <td><%= @movie.movie_length%></td>
+                </tr>
+                <br>
+                <tr>
+                  <td><strong>Director:</strong></td>
+                  <td><%= @movie.director%></td>
+                </tr>
+                <br>
+                <tr>
+                  <td><strong>Rating:</strong></td>
+                  <td><%= @movie.rating%></td>
+                </tr>
+                <br>
+              </tbody>
+            </table>
+            <% if @movie.user == current_user %>
+                <%= link_to "Edit Movie", edit_movie_path(@movie)%> |
+                <%= link_to "Delete Movie", movie_path(@movie), :method => :delete %>
+            <% end %>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<div>Movie Description: <%= @movie.description%></div>
-<div>Movie Length: <%= @movie.movie_length%></div>
-<div>Director: <%= @movie.director%></div>
-<div>Rating: <%= @movie.rating%></div>
-
-<% if @movie.user == current_user %>
-  <%= link_to "Edit Movie", edit_movie_path(@movie)%><br>
-  <%= link_to "Delete Movie", movie_path(@movie), :method => :delete %>
-<% end %>
-<br><br>
 
 
 <h4> Most recent Reviews:</h4>
