--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -19,3 +19,5 @@
   <%= f.text_field :rating %>
   <%= f.submit %>
 <% end %>
+
+<h4><%= link_to 'Back', movies_path, class: "btn btn-danger"  %></h4>
