--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -61,4 +61,4 @@
 
 
 
-<h4><%= link_to 'Back', movies_path, class: "btn btn-danger"  %></h4>
+<h4><%= link_to 'Back', movies_path, class: "btn btn-info"  %></h4>
