--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -20,4 +20,4 @@
   <%= f.submit %>
 <% end %>
 
-<h4><%= link_to 'Back', movies_path, class: "btn btn-danger"  %></h4>
+<h4><%= link_to 'Back', movies_path, class: "btn btn-info"  %></h4>
