--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container1">
 <h1> Signup! </h1>
 
 <%= render partial: "layouts/errors", locals: {object: @user}%>
@@ -16,3 +17,4 @@
     <%= f.submit "Submit" %>
 
 <% end %>
+</div>
