--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,25 +25,21 @@ body {
 }
 
 .container {
-    background: url(background.jpg);
-    margin-top: 10%;
+    background: url('background.jpg');
     
 }
 
-.welcome_title {
-    color: #white;
-    border: 2px #869089;
-    outline-style: inset;
-    outline-color: #white;
-    outline-width: medium;
+.title {
+    color: #c6c9c7;
     text-align: center;
     margin-left: 20%;
     margin-right: 20%;
     margin-top: 20%;
     margin-bottom: 20%;
-    font-size: 300px;
+    font-size: 100px;
+
+}
 
 
-  }
 
   
